<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/passView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/d" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/line4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3">

        <TextView
            android:id="@+id/genderView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="2"
            android:text="@string/g" />

        <RadioGroup
            android:id="@+id/radioSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_male" />

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_female" />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skillView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s" />

        <RelativeLayout
            android:id="@+id/boxSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/boxSubSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Android" />

                <CheckBox
                    android:id="@+id/cBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Java" />

                <CheckBox
                    android:id="@+id/cBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="C++" />

                <CheckBox
                    android:id="@+id/cBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Swift" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/boxSubSet"
                android:layout_weight="1"
                android:text="iOS" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/line6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line5">

        <TextView
            android:id="@+id/classText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:text="@string/c" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:entries="@array/classArr">

        </Spinner>
    </RelativeLayout>

    <Button
        android:id="@+id/rButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/r" />


</RelativeLayout>
