<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/passView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/passText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/d"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/genderView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="2"
            android:text="@string/g"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/genderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="2"
            android:text="@string/g"
            android:textStyle="bold"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skillView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/skillText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/classView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/c"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/classText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/c"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
